[package]
name = "levis_drive"
version = "0.1.0"
edition = "2021"

# cspell:ignore reqwest
[dependencies]
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
once_cell = "1.19"
chrono = "0.4"
rand = "0.8"


# cspell:ignore debuginfo
[profile.release]
strip = "debuginfo"
